fixed hp frm jumping around when the sheet was resized extra-wide

--- a/Mork Borg/morkborgstyle.css
+++ b/Mork Borg/morkborgstyle.css
@@ -86,7 +86,7 @@
   font-size: 1em;
   padding: 0 2px 0 2px;
   position: relative;
-  right: -1em;
+  right: -.25em;
   top: -1em;
 }
 
@@ -366,9 +366,9 @@
   clear: both;
   display: flex;
   flex-direction: column;
-  margin-bottom: 8.5em;
+  margin-bottom: 15em;
   position: relative;
-  top: 1em;
+  top: 8em;
 }
 
 .ui-dialog .charsheet main .hit-points input {
@@ -383,7 +383,6 @@
   padding: 0;
   position: relative;
   right: -1em;
-  top: -1em;
 }
 
 .charsheet main .hit-points .max-hit-points {
@@ -391,7 +390,7 @@
   padding: 0;
   position: relative;
   right: -2em;
-  top: -1.4em;
+  top: -1em;
 }
 
 .charsheet main .hit-points .max-hit-points input {
